<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity" >

    <TextView
        android:id="@+id/txtAboutEnactus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strAboutEnactus"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtSummaryBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:text="@string/strSummaryBody"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txtLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/strLink"
        android:textSize="12sp" />

    <View
        android:layout_width="1dp"
        android:layout_height="30dp">
    </View>
    
    <TextView
        android:id="@+id/txtContributions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strContributions"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtLauriane"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strLauriane" />

    <TextView
        android:id="@+id/txtLindsay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strLindsay" />

    <TextView
        android:id="@+id/txtSteven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strSteven" />

    <TextView
        android:id="@+id/txtMohit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strMohit" />

    <TextView
        android:id="@+id/txtDane"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strDane" />

    <TextView
        android:id="@+id/txtCJ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strCJ" />

    <TextView
        android:id="@+id/txtArvinder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strArvinder" />

</LinearLayout>
